fix: unflatten InputSchemas
