# src/kronicle/schemas/core/input_ressource_schema.py
@@ -6,6 +6,9 @@ from uuid import UUID
 from pydantic import Field
 
 from kronicle.schemas.input_schema import InputSchema, NamedInputSchema
+from kronicle.schemas.payload.input_payload import InputPayload
+from kronicle.schemas.payload.response_payload import ResponsePayload
+from kronicle.utils.str_utils import ensure_uuid4
 
 mod = "in_zone"
 
@@ -20,13 +23,17 @@ class InputZonePatch(InputSchema):
 
 class InputCoreChannel(InputSchema):
     id: UUID  # type: ignore
-    zone_id: UUID | None = None
+    zone: InputZone | None = None
+
+    @classmethod
+    def from_payload(cls, channel: InputPayload | ResponsePayload):
+        return cls(id=ensure_uuid4(channel.id), name=channel.name)
 
 
 class InputCoreChannelPatch(InputSchema):
-    zone_id: UUID | None = Field(default=None, description="Zone UUID to assign")
+    zone: InputZone | None = Field(default=None, description="Zone UUID to assign")
 
 
 class InputRow(InputSchema):
     id: UUID  # type: ignore
-    channel_id: UUID
+    channel: InputCoreChannel
